@@ -24,6 +24,7 @@ try:
 except ImportError:
     from twisted.protocols import http
 
+from flumotion.common import keycards, errors
 from flumotion.component.consumers.applestreamer import resources, hlsring
 from flumotion.component.base.http import HTTPAuthentication
 
@@ -41,6 +42,7 @@ http://localhost/mpegts-0.ts
 
 FRAGMENT = 'fragment1'
 
+
 class FakeStreamer():
 
     def __init__(self):
@@ -48,19 +50,23 @@ class FakeStreamer():
         self.currentBitRate = 1000
         self.ready = True
         self.mountPoint = "localhost"
-        self.ring = hlsring.HLSRing("localhost", "main.m3u8", "stream.m3u8", "")
+        self.ring = hlsring.HLSRing("localhost", "main.m3u8",
+                "stream.m3u8", "")
         self.ring.addFragment(FRAGMENT, 0, 10)
-        self.plugs = {}
+
+        self.medium = FakeAuthMedium()
+        self.plugs = {
+                'flumotion.component.plugs.request.RequestLoggerPlug': {}}
         self.httpauth = HTTPAuthentication(self)
 
     def clientAdded(self):
         self.clients += 1
 
-    def clientremoved(self):
+    def clientRemoved(self):
         self.clients -=1
 
     isReady = lambda s: s.ready
-    getClients = lambda s: str(s.clients)
+    getClients = lambda s: s.clients
     getCurrentBitrate = lambda s: s.currentBitRate
     getRing = lambda s: s.ring
     getName = lambda s: s.getName
@@ -86,6 +92,7 @@ class FakeTransport:
     def __getatt__(self, attr):
         return ''
 
+
 class FakeRequest:
     transport = FakeTransport()
 
@@ -102,6 +109,7 @@ class FakeRequest:
         self.data = ""
         self.clientproto=''
         self.code=''
+
 
         self.onFinish=onFinish
 
@@ -144,18 +152,70 @@ class FakeRequest:
     getDuration = lambda s: 0
 
 
+class FakeAuthMedium:
+    # this medium allows HTTP auth with fakeuser/fakepasswd
+
+    def __init__(self):
+        self.count = 0
+
+    def authenticate(self, bouncerName, keycard):
+        if keycard.username == 'fakeuser' and keycard.password == 'fakepasswd':
+            # the medium should also generate a unique keycard ID
+            keycard.id = self.count
+            self.count += 1
+            keycard.state = keycards.AUTHENTICATED
+            return defer.succeed(keycard)
+
+        return defer.succeed(None)
+
+
 class TestAppleStreamerSessions(unittest.TestCase):
+
+    def checkResponse(self, request, expected):
+        self.assertEquals(request.data, expected)
+        for d in reactor.getDelayedCalls():
+            d.cancel()
+
+    def assertUnauthorized(self, request):
+        # make the resource authenticate the request, and verify
+        # the request is not authorized
+
+        def checkResult(res):
+            errorCode = http.UNAUTHORIZED
+            self.assertEquals(request.headers.get('content-type', ''),
+                'text/html')
+            self.assertEquals(request.headers.get('server', ''),
+                resources.HTTP_VERSION)
+            self.assertEquals(request.response, errorCode)
+
+            expected = resources.ERROR_TEMPLATE % {
+                'code': errorCode,
+                'error': http.RESPONSES[errorCode]}
+            self.checkResponse(request, expected)
+
+            return res
+
+        d = self.streamer.httpauth.startAuthentication(request)
+        d.addCallbacks(checkResult, checkResult)
+        d1 = self.assertFailure(d, errors.NotAuthenticatedError)
+        return d1
+
+    def assertAuthorized(self, request):
+        # make the resource authenticate the request, and verify
+        # the request is authorized
+
+        def checkResult(res):
+            self.assertEquals(request.response, http.OK)
+
+        d = self.streamer.httpauth.startAuthentication(request)
+        d.addCallbacks(checkResult, checkResult)
+        return d
 
     def processRequest(self, method, path):
         d = defer.Deferred()
         request = FakeRequest(self.site, method, path, onFinish=d)
         self.resource.render_GET(request)
         return d
-
-    def checkResponse(self, response, expected):
-        self.assertEquals(response.data, expected)
-        for d in reactor.getDelayedCalls():
-            d.cancel()
 
     def setUp(self):
         self.streamer = FakeStreamer()
@@ -170,7 +230,7 @@ class TestAppleStreamerSessions(unittest.TestCase):
         self.assertEquals(request.response, http.SERVICE_UNAVAILABLE)
 
     def testServerFull(self):
-        self.resource.reachedServerLimits = lambda : True
+        self.resource.reachedServerLimits = lambda: True
         request = FakeRequest(self.site, "GET", "/test")
         self.resource.render_GET(request)
         self.assertEquals(request.response, http.SERVICE_UNAVAILABLE)
@@ -179,37 +239,38 @@ class TestAppleStreamerSessions(unittest.TestCase):
         request = FakeRequest(self.site, "GET", "test.m3u8")
         self.resource.render_GET(request)
         expected = resources.ERROR_TEMPLATE % {
-                'code' : http.FORBIDDEN,
+                'code': http.FORBIDDEN,
                 'error': http.RESPONSES[http.FORBIDDEN]}
         self.assertEquals(expected, request.data)
 
     def testPlaylistNotFound(self):
-        d = self.processRequest("GET","/localhost/test.m3u8")
+        d = self.processRequest("GET", "/localhost/test.m3u8")
         expected = resources.ERROR_TEMPLATE % {
-                'code' : http.NOT_FOUND,
+                'code': http.NOT_FOUND,
                 'error': http.RESPONSES[http.NOT_FOUND]}
         d.addCallback(self.checkResponse, expected)
         return d
 
     def testFragmentNotFound(self):
-        d = self.processRequest("GET","/localhost/test.ts")
+        d = self.processRequest("GET", "/localhost/test.ts")
         expected = resources.ERROR_TEMPLATE % {
-                'code' : http.NOT_FOUND,
+                'code': http.NOT_FOUND,
                 'error': http.RESPONSES[http.NOT_FOUND]}
         d.addCallback(self.checkResponse, expected)
         return d
 
     def testGetMainPlaylist(self):
-        d = self.processRequest("GET","/localhost/stream.m3u8")
+        d = self.processRequest("GET", "/localhost/stream.m3u8")
         d.addCallback(self.checkResponse, MAIN_PLAYLIST)
         return d
 
     def testGetFragment(self):
-        d = self.processRequest("GET","/localhost/mpegts-0.ts")
+        d = self.processRequest("GET", "/localhost/mpegts-0.ts")
         d.addCallback(self.checkResponse, FRAGMENT)
         return d
 
     def testNewSession(self):
+
         def checkSessionCreated(request):
             cookie = request.getCookie(resources.COOKIE_NAME)
             self.failIf(cookie is None)
@@ -219,47 +280,61 @@ class TestAppleStreamerSessions(unittest.TestCase):
             for d in reactor.getDelayedCalls():
                 d.cancel()
 
-        d = self.processRequest("GET","/localhost/stream.m3u8")
+        d = self.processRequest("GET", "/localhost/stream.m3u8")
         d.addCallback(checkSessionCreated)
         return d
 
-'''
-sessionExpired is never fired
     def testSessionExpired(self):
-        def sessionExpired(result):
-            self.assert_(True)
+
+        def sessionExpired():
+            self.assertEquals(self.streamer.getClients(), 0)
             for d in reactor.getDelayedCalls():
                 d.cancel()
 
-        def checkSessionExpired(request, d):
+        def checkSessionExpired(request):
             cookie = request.getCookie(resources.COOKIE_NAME)
             self.failIf(cookie is None)
             sessionID = base64.b64decode(cookie).split(':')[0]
             session = self.site.sessions.get(sessionID, None)
             self.failIf(session is None)
-            d.addCallback(sessionExpired)
-            session.notifyOnExpire(d.callback)
+            d1 = defer.Deferred()
+            session.notifyOnExpire(lambda: d1.callback(''))
+            return d1
 
-        d = self.processRequest("GET","/localhost/stream.m3u8")
-        d1 = defer.Deferred()
-        d.addCallback(checkSessionExpired, d1)
-        return d1
-'''
+        d = self.processRequest("GET", "/localhost/stream.m3u8")
+        d.addCallback(checkSessionExpired)
+        return d
 
+    def testTokens(self):
+        IP1='192.168.1.1'
+        IP2='192.168.1.2'
 
+        cookie = self.resource._generateToken('1', IP1, 0)
+        # Test wrong IP
+        self.assertEquals(self.resource._cookieIsValid(cookie, IP2),
+                resources.NOT_VALID)
+        # Test Bad Signature
+        cookie = self.resource._generateToken('1', IP1, 0)
+        resources.SECRET = 'secret'
+        self.assertEquals(self.resource._cookieIsValid(cookie, IP1),
+                resources.NOT_VALID)
+        # Test authentication expired
+        cookie = self.resource._generateToken('1', IP1, 1)
+        self.assertEquals(self.resource._cookieIsValid(cookie, IP1),
+                resources.RENEW_AUTH)
 
+    def testRenderHTTPAuthUnauthorized(self):
+        self.streamer.httpauth.setBouncerName('fakebouncer')
+        self.streamer.httpauth.setDomain('FakeDomain')
+        request = FakeRequest(self.site, "GET", "/localhost/stream.m3u8")
+        request.passwd = 'badpassword'
+        return self.assertUnauthorized(request)
 
-
-
-
-
-
-
-
-
-
-
-
+    def testRenderHTTPAuthAuthorized(self):
+        self.streamer.httpauth.setBouncerName('fakebouncer')
+        self.streamer.httpauth.setDomain('FakeDomain')
+        request = FakeRequest(self.site, "GET", "/localhost/stream.m3u8")
+        return self.assertAuthorized(request)
 
 
 if __name__ == '__main__':
