@@ -1,3 +1,8 @@
+2010-01-08  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/test/test_resource.py:
+	Updated test suite for the resource element
+
 2010-01-02  Marc-André Lureau  <mlureau@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/resources.py:
